# InduTechData

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: 01- Choix des services AWS adaptés.md  02- Evaluation de compatibilité SI.md  cout des services en détails.xlsx
src/: config.py  monitoring.py  producer.py  stream_job.py
